# messi

./: .env.example  .gitignore  PRD.md  README.md  calibration_results.txt  calibration_results_20241125_115942.txt  calibration_results_20241125_121128.txt  calibration_results_20241125_122647.txt  calibration_results_20241125_122713.txt  calibration_results_20241125_123604.txt  calibration_results_20241126_130804.txt  calibration_results_20241126_130822.txt  calibration_results_20241203_200845.txt  calibration_results_20241203_204522.txt  pyproject.toml  requirements.txt  wake_word_calibration.txt
config/: config.yaml  default.yaml  dynamic_config.yaml  learning.yaml  skills_config.yaml  user_config.yaml
data/: users.json
deployment/: smart-speaker.service
docs/: PARALLEL_PROCESSING.md  QA_PROCESS.md  README.md  balena.md  learning.md  storywritingProcess.md
docs/architecture/: AUDIO_PIPELINE.md  INTENT_SYSTEM.md  OVERVIEW.md  PARALLEL_PROCESSING.md
docs/components/: AUDIO_INTERFACE.md  INTENT_LEARNER.md
learning/: intent_stats.json  intent_suggestions.json  unmatched_intents.csv
messi-mirror/: config  packed-refs
models/: hey-messy_en_raspberry-pi_v3_0_0.ppn
scripts/: benchmark.py  calibrate_mic.py  generate_audio_assets.py  generate_transition_audio.py  generate_transition_texts.py  install_pi.sh  list_audio_devices.py  start.sh  test_audio.py  test_audio_playback.py  test_bedtime_story.py  test_file_operations.py  test_story.py
src/: main.py
src/core/: audio.py  (+20 more)
tests/: audio_test_suite.py  test_audio.py  test_vosk_stt.py  test_whisper_lite.py
(+17 files in other folders)
