[tool.poetry]
name = "smart-pi-speaker"
version = "0.1.0"
description = "A customizable smart speaker powered by Raspberry Pi"
authors = ["Your Name <your.email@example.com>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.104.0"
uvicorn = "^0.24.0"
pyaudio = "^0.2.13"
openai = "^1.3.0"
pvporcupine = "^2.2.0"
numpy = "^1.24.0"
pydantic = "^2.5.0"
pydantic-settings = "^2.1.0"
aiofiles = "^23.2.1"

[tool.poetry.dev-dependencies]
pytest = "^7.4.3"
pytest-asyncio = "^0.21.1"
black = "^23.10.1"
isort = "^5.12.0"
pre-commit = "^3.5.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api" 